# refurb-plugin-example

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
refurb_plugin_example/: your_check.py
test/: test_checks.py
test/data/: err_XYZ_100.py  err_XYZ_100.txt
